@@ -53,6 +53,33 @@ public class Foo {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description><![CDATA[
+var is not used in equals() call
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Foo {
+ public void bar() {
+  if (c != null && A.b(c).equals(d)) {}
+ }
+}
+     ]]></code>
+    </test-code>
+    <test-code>
+        <description><![CDATA[
+[ 1481051 ] false + UnusedNullCheckInEquals
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Foo {
+ public void bar() {
+if(o1!=null && o1[0] != null && o2[0].getName()!=null && o2[0].getName().equals(o1[0].getName()) ){ }
+if(o1!=null && o2.equals(o1.getName()) ){ }
+ }
+}
+     ]]></code>
+    </test-code>
     <!--test-code>
         <description><![CDATA[
 shouldn't this fail?
